# Programowanie-obiektowe-projekt-ko-cowy

./: CMakeLists.txt  README.md  Task.cpp  Task.h  datetime_dialog.cpp  datetime_dialog.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
